objects/vlocity_ins__AssetPartyRelationship__c.object
<CustomObject>
    <description>Relationships to parties with a role on a held product (asset).  For example, policyholder, beneficiary, producer, account holder or authorized user.</description>
    <fields>
        <fullName>vlocity_ins__AssetId__c</fullName>
        <description>The parent held product, such as a policy or financial account.</description>
        <label>Held Product</label>
        <referenceTo>Asset</referenceTo>
        <relationshipLabel>Held Product Relationships</relationshipLabel>
        <relationshipName>AssetPartyRels</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__AttributeSelectedValues__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Attribute Selected Values</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__BeneficiaryPercentage__c</fullName>
        <description>For beneficiary relationships, the percentage of the total value to be paid to this beneficiary.</description>
        <label>Beneficiary Percentage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__CommissionPercentage__c</fullName>
        <description>For producer relationships, the percentage of the commission that will be paid to this producer.</description>
        <label>Commission Percentage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__InsuredPartyNumber__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Insured Party Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__InsuredPartySpecId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Insured Party Spec Id</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Held Product Relationships</relationshipLabel>
        <relationshipName>HeldProductRelationships</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__MembershipNumber__c</fullName>
        <description>Subscriber Id stamped on health insurance member Id card.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Membership Number</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__PartyAccountId__c</fullName>
        <description>Formula: the account id for a party of type account.</description>
        <formula>CASESAFEID(vlocity_ins__PartyId__r.vlocity_ins__AccountId__r.Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__PartyContactId__c</fullName>
        <description>Formula: the contact id for a party of type contact.</description>
        <formula>CASESAFEID(vlocity_ins__PartyId__r.vlocity_ins__ContactId__r.Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__PartyId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Id of the related party.</description>
        <label>Party</label>
        <referenceTo>vlocity_ins__Party__c</referenceTo>
        <relationshipName>AssetPartyRels</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__PartyLink__c</fullName>
        <description>Formula: a hyperlink to the detail page for the related party based on the type of party.</description>
        <formula>IF( ISBLANK(vlocity_ins__PartyId__r.vlocity_ins__AccountId__r.Id), HYPERLINK(&quot;/&quot; &amp; vlocity_ins__PartyId__r.vlocity_ins__ContactId__r.Id, vlocity_ins__PartyId__r.Name  , &quot;_parent&quot;), HYPERLINK(&quot;/&quot; &amp; vlocity_ins__PartyId__r.vlocity_ins__AccountId__r.Id, vlocity_ins__PartyId__r.Name , &quot;_parent&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Party</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__PartyRelationshipTypeId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The relationship type, or role, for this relationship.</description>
        <label>Relationship Type</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>vlocity_ins__PartyRelationshipType__c.vlocity_ins__SourcePartyType__c</field>
                <operation>equals</operation>
                <value></value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>vlocity_ins__PartyRelationshipType__c</referenceTo>
        <relationshipLabel>Held Product Relationships</relationshipLabel>
        <relationshipName>AssetPartyRels</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__PremiumAmount__c</fullName>
        <label>Premium</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ProRatedPremiumAmount__c</fullName>
        <description>Prorated amount of premium base on the remaining days of the modified Party Relationship</description>
        <label>Prorated Premium</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ProductionCodeId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the credited production code.</description>
        <label>Production Code</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>vlocity_ins__ProductionCode__c.vlocity_ins__IsWritingCode__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>vlocity_ins__ProductionCode__c</referenceTo>
        <relationshipLabel>Held Product Relationships</relationshipLabel>
        <relationshipName>HeldProductRelationships</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__RecordTypeName__c</fullName>
        <formula>vlocity_ins__InsuredPartySpecId__r.vlocity_ins__RecordTypeName__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Record Type Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__RelationshipToInsured__c</fullName>
        <description>Text description of the relationship of this party to the insured such as spouse or child.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Relationship to Insured</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__TotalSumInsured__c</fullName>
        <label>Total Sum Insured</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Held Product Relationship</label>
    <listViews>
        <fullName>vlocity_ins__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Description</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Held Product Relationships</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>